Accesibilité: Correction sur Contrast ratio

--- a/style.css
+++ b/style.css
@@ -762,7 +762,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #c55429;
+    background-color: #9d3811;
 }
 
 .tc-white {
@@ -770,7 +770,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #c55429;
+    background: #9d3811;
 }
 
 .btn-atomic-tangerine:hover {
@@ -787,7 +787,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #c55429!important;
+    color: #9d3811!important;
 }
 
 .ltc-atomic-tangerine:hover {
